# lambda-test

./: .envrc  Cargo.toml  Dockerfile  README.md  flake.nix
src/: main.rs
