[package]
name = "lambda-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
axum-aws-lambda = "0.5"
http = "0.2"
hyper = "0.14"
lambda_http = "0.8"
lambda_runtime = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "compression-gzip", "compression-deflate", "trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["json"] }

